# sparse_benchmark

./: .gitmodules  CMakeLists.txt  README.md  acc_compare.cc  benchmark.cc  data_wrangling.cc  modeling.cc  sc_ae_speedups.cc  tile_size_scan.cc
benzene_data/: TEoo.tns  d_LMOP.tns
latex/FastCC_AE/: abstract.tex  background.tex  conc.tex  defines.tex  details.tex  exp.tex  loop_orders.tex  main.tex  refs.bib
latex/FastCC_AE/data/: caffeinevvov_threadscale.txt  chicago0_threadscale.txt  main_scatter.txt  molecule_scatter.txt  sparta_frostt.txt  sparta_molecule.txt  speedup_best_desktop.txt  speedup_best_server.txt  speedup_model_desktop.txt  speedup_model_server.txt  taco_frostt.txt  taco_molecule.txt
latex/FastCC_AE/data/molecules/: caffeine_desktop_best.txt  caffeine_desktop_model.txt  caffeine_server_best.txt  caffeine_server_model.txt  desktop_best.txt  desktop_model.txt  guanine_desktop_best.txt  guanine_desktop_model.txt  guanine_server_best.txt  guanine_server_model.txt  server_best.txt  server_model.txt
latex/FastCC_AE/figures/: all_tile_comparison.tex  bar_chart_figures.tex  frostt_scatter.tex  molecule_scatter.tex  plot_data.tex  scatter_figure.tex  taco_figure.tex  taco_frostt.tex  taco_molecule.tex  thread_scaling.tex  thread_scaling_frostt.tex  tile_comparison_desktop.tex  times_comparison_server.tex
latex/FastCC_AE/figures/molecules/: caffeine_desktop.tex  desktop_subfig.tex  guanine_desktop.tex  molecules.tex  server_subfig.tex
patches/: ttt.c
scripts/: build_pdf.sh  build_sparta.sh  calculate_speedup.sh  convert_tiles_to_csv.sh  download_tensors.sh  extract_sparta.sh  extract_tiles.sh  generate_plots.sh  prep_csv.sh  prep_scatter.sh  run_all.sh  run_fastcc.sh  run_sparta_parallel.sh  run_sparta_serial.sh  split_fastcc_best_model.sh  split_fastcc_tiles.sh  split_sparta.sh
